@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: biff.cc,v $
-// Revision      : $Revision: 1.8 $
-// Revision date : $Date: 2004/12/06 21:24:41 $
+// Revision      : $Revision: 1.9 $
+// Revision date : $Date: 2004/12/20 23:40:10 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -110,6 +110,8 @@ Biff::Biff (gint ui_mode,
 	applet_use_geometry_	= true;
 	applet_geometry_		= "+0+0";
 	applet_use_decoration_	= false;
+	applet_be_sticky_       = false;
+	applet_keep_above_      = false;
 	applet_font_			= "sans 10";
 	use_newmail_text_		= true;
 	newmail_text_			= "%d";
@@ -124,6 +126,8 @@ Biff::Biff (gint ui_mode,
 	use_popup_				= true;	
 	popup_delay_			= 5;
 	popup_use_geometry_		= true;
+	popup_be_sticky_        = false;
+	popup_keep_above_       = false;
 	popup_geometry_			= "-0+0";
 	popup_font_				= "sans 10";
 	popup_use_decoration_	= false;
@@ -445,6 +449,8 @@ Biff::save (void)
 	save_newblock("applet");
 	save_para("applet_use_geometry",applet_use_geometry_);
 	save_para("applet_geometry",applet_geometry_);
+	save_para("applet_be_sticky",applet_be_sticky_);
+	save_para("applet_keep_above",applet_keep_above_);
 	save_para("applet_use_decoration",applet_use_decoration_);
 	save_para("applet_font",applet_font_);
 	save_para("use_newmail_text",use_newmail_text_);
@@ -464,6 +470,8 @@ Biff::save (void)
 	save_para("popup_use_geometry",popup_use_geometry_);
 	save_para("popup_geometry",popup_geometry_);
 	save_para("popup_use_decoration",popup_use_decoration_);
+	save_para("popup_be_sticky",popup_be_sticky_);
+	save_para("popup_keep_above",popup_keep_above_);
 	save_para("popup_font",popup_font_);
 	save_para("popup_use_size",popup_use_size_);
 	save_para("popup_size",popup_size_);
@@ -625,7 +633,6 @@ Biff::xml_start_element (GMarkupParseContext *context,
 			mailbox_[count_]->port(value);
 		}
 
-
 		else if (fmap["name"] == "folder") {
 			mailbox_[count_]->folder (fmap["value"]);
 		}
@@ -661,7 +668,6 @@ Biff::xml_start_element (GMarkupParseContext *context,
 			guint value; strin >> value;
 			mailbox_[count_]->other_port(value);
 		}
-
 
 		else if (fmap["name"] == "seen") {
 			std::istringstream strin (fmap["value"]);
@@ -717,6 +723,16 @@ Biff::xml_start_element (GMarkupParseContext *context,
 
 		else if (fmap["name"] == "applet_geometry") {
 			applet_geometry_ = fmap["value"];
+		}
+
+		else if (fmap["name"] == "applet_be_sticky") {
+			std::istringstream strin(fmap["value"]);
+			strin >> applet_be_sticky_;
+		}
+
+		else if (fmap["name"] == "applet_keep_above") {
+			std::istringstream strin(fmap["value"]);
+			strin >> applet_keep_above_;
 		}
 
 		else if (fmap["name"] == "applet_use_decoration") {
@@ -791,6 +807,16 @@ Biff::xml_start_element (GMarkupParseContext *context,
 		else if (fmap["name"] == "popup_use_decoration") {
 			std::istringstream strin(fmap["value"]);
 			strin >> popup_use_decoration_;
+		}
+
+		else if (fmap["name"] == "popup_be_sticky") {
+			std::istringstream strin(fmap["value"]);
+			strin >> popup_be_sticky_;
+		}
+
+		else if (fmap["name"] == "popup_keep_above") {
+			std::istringstream strin(fmap["value"]);
+			strin >> popup_keep_above_;
 		}
 
 		else if (fmap["name"] == "popup_font") {
